testsuite/tests/rewriting_errors/unit_checker/test.out
custom.lkql:3:5: error: Auto fixes not available for unit checks
3 |     auto_fix=(n, ctx) => ()
  |     ^^^^^^^^^^^^^^^^^^^^^^^
